--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Caigui Jiang"
-  avatar           : "profile.png"
+  avatar           : "Caigui_Jiang_VCC.jpg"
   bio              : "Research scientist at KAUST"
   location         : "KSA"
   employer         :
